# c_projects

basic/: .vimrc  CMakeLists.txt
basic/inc/: btree.h  fileops.h  main.h
basic/src/: .main.c.swp  btree.c  fileops.c  func_pointers.c  main.c  stringops.c
